--- a/ui/style.css
+++ b/ui/style.css
@@ -28,3 +28,104 @@ body {
 		color: dark grey;
 		font-family: sans-serif;
 }
+
+/*navigation bar*/
+.lighten-1{
+  background-color: #42A5F5 !important;
+}
+
+.light-blue{
+  background-color: #03a9f4 !important;
+}
+
+/*nav contents*/
+.container{
+ margin: 0 auto;
+ max-width: 1280px;
+ width: 90%;
+}
+
+.nav-wrapper {
+  position: relative;
+  height: 100%;
+}
+
+@media only screen and (min-width: 601px) {
+  .container {
+    width: 85%;
+  }
+}
+
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 70%;
+  }
+}
+
+
+@media only screen and (max-width: 992px) {
+  .hide-on-med-and-down {
+    display: none !important;
+  }
+}
+
+
+/*footer*/
+.page-footer {
+  margin-top: 20px;
+  padding-top: 20px;
+  background-color: #ee6e73;
+}
+
+.footer-copyright {
+  overflow: hidden;
+  height: 50px;
+  line-height: 50px;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(51, 51, 51, 0.08);
+}
+
+
+/*******************
+  Utility Classes
+*******************/
+.hide {
+  display: none !important;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.right-align {
+  text-align: right;
+}
+
+.center, .center-align {
+  text-align: center;
+}
+
+.left {
+  float: left !important;
+}
+
+.right {
+  float: right !important;
+}
+
+/*mobile screen*/
+.button-collapse {
+  float: left;
+  position: relative;
+  z-index: 1;
+  height: 56px;
+}
+
+.material-icons {
+  display: inline-block;
+  float: left;
+  font-size: 24px;
+}
+
+/*font*/
+    
