[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -31,11 +31,11 @@ body {
 
 /*navigation bar*/
 .lighten-1{
-  background-color: #42A5F5 !important;
+  background-color: #42A5F5;
 }
 
 .light-blue{
-  background-color: #03a9f4 !important;
+  background-color: #03a9f4;
 }
 
 /*nav contents*/
